--- a/FlightFinder.Client/FlightFinder.Client.csproj
+++ b/FlightFinder.Client/FlightFinder.Client.csproj
@@ -19,4 +19,14 @@
     <ProjectReference Include="..\FlightFinder.Shared\FlightFinder.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\favicon.ico">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <BlazorGenerate Remove="Components\FiltersList.cshtml" />
+  </ItemGroup>
+
 </Project>
