--- a/FlightFinder.Client/FlightFinder.Client.csproj
+++ b/FlightFinder.Client/FlightFinder.Client.csproj
@@ -25,4 +25,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <BlazorGenerate Remove="Components\FilterList.cshtml" />
+  </ItemGroup>
+
 </Project>
