--- a/FlightFinder.Client/FlightFinder.Client.csproj
+++ b/FlightFinder.Client/FlightFinder.Client.csproj
@@ -6,7 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\css\bootstrap-theme.css.map" />
+    <None Include="wwwroot\css\bootstrap.css.map" />
     <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\fonts\glyphicons-halflings-regular.svg" />
+    <None Include="wwwroot\fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="wwwroot\js\bootstrap.js" />
+    <None Include="wwwroot\js\bootstrap.min.js" />
+    <None Include="wwwroot\js\npm.js" />
   </ItemGroup>
 
   <ItemGroup>
